# Geography-Based-SEIRDS-Vaccinated-Travel-Restriction

./: .gitignore  CMakeLists.txt  README.md  run_simulation.ps1  run_simulation.sh
GIS_Viewer/: .gitignore
GIS_Viewer/example/: README.md  structure.json  visualization.json
GIS_Viewer/ontario/logs/: pandemic_messages.txt  pandemic_state.txt
GIS_Viewer/ontario/logs/stats/aggregate/: aggregate_timeseries.csv
GIS_Viewer/ontario/logs/stats/region_2226/: region_2226_percentage_timeseries.csv  region_2226_totals_timeseries.csv
GIS_Viewer/ottawa/: visualization.json
Scripts/: .gitignore
Scripts/Graph_Generator/: README.md  README.txt  generate_all.sh  graph_aggregates.py  graph_per_regions.py  states.csv
Scripts/Input_Generator/: README.md  generateScenario.py  generate_json.py  generate_ontario_phu_json.py  generate_ottawa_da_json.py  readme.md
Scripts/Input_Generator/input_ontario_phu/: README.md  default.json  default_old.json  infectedCell.json  infectedCell_old.json
Scripts/Input_Generator/input_ottawa_da/: README.md  default.json  infectedCell.json
Scripts/Input_Generator/ontario/: default.json
Scripts/Input_Generator/ontario_caseStudy/: default.json  infectedCell.json
Scripts/Input_Generator/ottawa/: default.json
Scripts/Msg_Log_Parser/: README.md
cadmium_gis/Ottawa_DAs/: readme.md
cadmium_gis/ottawa/: README.md  ottawa_dauid_adjacency.csv  ottawa_dauid_clean.csv
cadmium_gis/world/: generatorData.json  visualization.json  world.geojson  world_country_id.gpkg  world_country_id_adjacency.csv  world_country_id_clean.csv
config/: .gitignore  README.md  scenario_ontario_caseStudy.json  scenario_ontario_phu.json  tinyScenario.json
model/: geographical_coupled.hpp
model/cells/: README.md  geographical_cell.hpp  seird.hpp  sevirds.hpp
src/: main.cpp
src/model/: geographical_coupled.hpp
src/model/cells/: AgeData.hpp  README.md  geographical_cell.hpp  hysteresis_factor.hpp  sevirds.hpp  simulation_config.hpp  vicinity.hpp
(+66 files in other folders)
